--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-hd
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+  <a href="firstProject/project1.html">firstproject </a>  
+</body>
+</html>
