--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-  <a href="firstProject/project1.html">firstproject </a>  
+  <a href="./firstProject/project1.html">firstproject </a>  
 </body>
 </html>
