--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
   <a href="./firstProject/project1.html">firstproject </a>  
+    <a href="./2ndProject/assignment.html">second project</a>
 </body>
 </html>
