--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
   <a href="./firstProject/project1.html">firstproject </a>  
     <br>
     <a href="./2ndProject/assignment.html">second project</a>
+    <a href="./practice/fish.html">svg</a>
 </body>
 </html>
